--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -1,12 +1,12 @@
-name: Build on merge
-"on":
+name: Linting and Testing
+'on':
   push:
     branches:
-      - "*"
+      - '*'
 
 jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - run: npm ci && npm build
+      - run: npm ci && npm run lint && npm test
