--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "args-md",
-  "version": "0.0.1-alpha",
+  "version": "1.0.0",
   "description": "The CLI tool that output the help message of args as markdown.",
   "main": "dist/index.js",
   "bin": "dist/cli/index.js",
+  "types": "src/global.d.ts",
   "scripts": {
     "tsc": "tsc",
-    "lint": "eslint",
+    "lint": "eslint --ext .ts,.tsx ./src",
     "build": "npm run lint && tsc",
     "clean": "rm -rf dist/",
-    "prepublishOnly": "tsc"
+    "prepublishOnly": "tsc",
+    "test": "jest src/tests"
   },
   "keywords": [
     "args",
@@ -28,13 +30,17 @@
   "author": "Yan",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/node": "^18.16.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.39.0",
-    "eslint-config-standard-with-typescript": "^34.0.1",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.7.0",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint-config-prettier": "^8.8.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "prettier": "^2.8.8"
   }
 }
